--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,12 @@
     <version>1.509.1</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
-  <groupId>org.jenkins-ci.plugins</groupId>
-  <artifactId>test-splitter</artifactId>
+  <artifactId>parallel-test-executor</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
+
+  <name>Jenkins Parallel Test Executor Plugin</name>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/Parallel+Text+Executor+Plugin</url>
 
   <dependencies>
     <dependency>
