--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>parameterized-trigger</artifactId>
-      <version>2.18-SNAPSHOT</version>
+      <version>2.18</version>
     </dependency>
   </dependencies>
   <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
