--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
       <artifactId>workflow-step-api</artifactId>
       <version>${workflow.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>script-security</artifactId>
+      <version>1.13</version>
+      <optional>true</optional>
+    </dependency>
     <dependency> <!-- For ease of demonstrating parallel-test-executor-plugin-sample -->
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
