--- a/demo/repo/Jenkinsfile
+++ b/demo/repo/Jenkinsfile
@@ -1,7 +1,7 @@
-def splits = splitTests(parallelism: [$class: 'CountDrivenParallelism', size: 5], generateInclusions: true)
+def splits = splitTests parallelism: [$class: 'CountDrivenParallelism', size: 5], generateInclusions: true
 def branches = [:]
 for (int i = 0; i < splits.size(); i++) {
-  def split = splits.get(i);
+  def split = splits[i]
   branches["split${i}"] = {
     node('!master') {
       checkout scm
