--- a/demo/repo/Jenkinsfile
+++ b/demo/repo/Jenkinsfile
@@ -1,4 +1,4 @@
-def splits = splitTests parallelism: [$class: 'CountDrivenParallelism', size: 5], generateInclusions: true
+def splits = splitTests parallelism: count(5), generateInclusions: true
 def branches = [:]
 for (int i = 0; i < splits.size(); i++) {
   def split = splits[i]
@@ -8,7 +8,7 @@ for (int i = 0; i < splits.size(); i++) {
       writeFile file: (split.includes ? 'inclusions.txt' : 'exclusions.txt'), text: split.list.join("\n")
       writeFile file: (split.includes ? 'exclusions.txt' : 'inclusions.txt'), text: ''
       sh 'mvn -s /tmp/settings.xml -B clean test -Dmaven.test.failure.ignore'
-      step([$class: 'JUnitResultArchiver', testResults: 'target/surefire-reports/*.xml'])
+      junit 'target/surefire-reports/*.xml'
     }
   }
 }
