--- a/demo/Makefile
+++ b/demo/Makefile
@@ -2,7 +2,22 @@ TAG=$(shell perl -n -e 'if (/parallel-test-executor:(.+)/) {print $$1}' plugins.
 IMAGE=jenkinsci/parallel-test-executor-demo
 DOCKER_RUN=docker run --rm -p 8080:8080 -v m2repo:/m2repo -v /var/run/docker.sock:/var/run/docker.sock --group-add=$(shell stat -c %g /var/run/docker.sock) -ti
 
-build:
+copy-plugins:
+	set -e; \
+	mkdir -p plugins; \
+	for gav in `cat plugins.txt`; do \
+	  g=`echo $$gav | cut -f1 -d: | perl -pe 's{[.]}{/}g'`; \
+	  a=`echo $$gav | cut -f2 -d:`; \
+	  v=`echo $$gav | cut -f3 -d:`; \
+	  hpi=$$HOME/.m2/repository/$$g/$$a/$$v/$$a-$$v.hpi; \
+	  if [ \! -f $$hpi ]; then \
+	    mvn -U org.apache.maven.plugins:maven-dependency-plugin:2.5.1:get -Dartifact=$$gav:hpi -Dtransitive=false ||\
+	      (locate $$a-$$v.hpi | fgrep .m2/repository/; false); \
+	  fi; \
+	  cp -v $$hpi plugins/$$a.jpi; \
+	done
+
+build: copy-plugins
 	docker build -t $(IMAGE):$(TAG) .
 
 # http://stackoverflow.com/q/23544282/12916 unclear how best to ensure that the jenkins user can write to this volume
@@ -13,17 +28,8 @@ volume:
 run: build volume
 	$(DOCKER_RUN) $(IMAGE):$(TAG)
 
-build-snapshot:
-	docker build -t $(IMAGE):RELEASE .
-	[ -f ../target/parallel-test-executor.hpi ] || mvn -f .. -DskipTests clean install
-	cp -v ../target/parallel-test-executor.hpi snapshot/parallel-test-executor.jpi
-	docker build -t $(IMAGE):SNAPSHOT snapshot
-
-run-snapshot: build-snapshot volume
-	$(DOCKER_RUN) $(IMAGE):SNAPSHOT
-
 clean:
-	rm -rf snapshot/plugins
+	rm -rf plugins
 
 push:
 	docker push $(IMAGE):$(TAG)
