--- a/demo/repo/Jenkinsfile
+++ b/demo/repo/Jenkinsfile
@@ -1,6 +1,12 @@
 @Library('testInParallel') _
-testInParallel(count(5), 'inclusions.txt', 'exclusions.txt', 'target/surefire-reports/TEST-*.xml', 'maven:3.3.9-jdk-8', {
+
+node {
   checkout scm
+  stash name: 'sources', excludes: 'Jenkinsfile,target/'
+}
+
+testInParallel(count(5), 'inclusions.txt', 'exclusions.txt', 'target/surefire-reports/TEST-*.xml', 'maven:3.3.9-jdk-8', {
+  unstash 'sources'
 }, {
   wrap([$class: 'ConfigFileBuildWrapper', managedFiles: [[fileId: 'jenkins-mirror', variable: 'SETTINGS']]]) {
     sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
