--- a/demo/repo/Jenkinsfile
+++ b/demo/repo/Jenkinsfile
@@ -8,7 +8,7 @@ node {
 testInParallel(count(5), 'inclusions.txt', 'exclusions.txt', 'target/surefire-reports/TEST-*.xml', 'maven:3.3.9-jdk-8', {
   unstash 'sources'
 }, {
-  wrap([$class: 'ConfigFileBuildWrapper', managedFiles: [[fileId: 'jenkins-mirror', variable: 'SETTINGS']]]) {
+  configFileProvider([configFile(fileId: 'jenkins-mirror', variable: 'SETTINGS')]) {
     sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
   }
 })
