--- a/demo/repo/Jenkinsfile
+++ b/demo/repo/Jenkinsfile
@@ -1,14 +1,18 @@
 @Library('testInParallel') _
 
-node {
-  checkout scm
-  stash name: 'sources', excludes: 'Jenkinsfile,target/'
+stage('Sources') {
+  node {
+    checkout scm
+    stash name: 'sources', excludes: 'Jenkinsfile,target/'
+  }
 }
 
-testInParallel(count(5), 'inclusions.txt', 'exclusions.txt', 'target/surefire-reports/TEST-*.xml', 'maven:3.3.9-jdk-8', {
-  unstash 'sources'
-}, {
-  configFileProvider([configFile(fileId: 'jenkins-mirror', variable: 'SETTINGS')]) {
-    sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
-  }
-})
+stage('Testing') {
+  testInParallel(count(5), 'inclusions.txt', 'exclusions.txt', 'target/surefire-reports/TEST-*.xml', 'maven:3.3.9-jdk-8', {
+    unstash 'sources'
+  }, {
+    configFileProvider([configFile(fileId: 'jenkins-mirror', variable: 'SETTINGS')]) {
+      sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
+    }
+  })
+}
