--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -25,6 +25,6 @@ RUN cd /tmp/repo && \
 
 # TODO without this JENKINS-24752 workaround, it takes too long to provision.
 # (Do not add hudson.model.LoadStatistics.decay=0.1; in that case we overprovision slaves which never get used, and OnceRetentionStrategy.check disconnects them after an idle timeout.)
-ENV JAVA_OPTS -Dhudson.model.LoadStatistics.clock=1000
+ENV JAVA_OPTS -Dhudson.model.LoadStatistics.clock=1000 -Djenkins.install.state=INITIAL_SECURITY_SETUP
 
 ADD JENKINS_HOME /usr/share/jenkins/ref
