--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit-realtime-test-reporter</artifactId>
-            <version>0.5-SNAPSHOT</version> <!-- TODO -->
+            <version>0.5-SNAPSHOT</version> <!-- TODO https://github.com/jenkinsci/junit-realtime-test-reporter-plugin/pull/2 -->
             <scope>test</scope>
             <exclusions>
                 <exclusion>
