--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-api</artifactId>
-      <version>2.22</version>
+      <version>2.24-20171102.143143-1</version> <!-- TODO: Switch to release once https://github.com/jenkinsci/workflow-api-plugin/pull/59 is merged/released -->
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
