Update demo to use per-stage results
Note - I can't test this locally because you can't build this on OS
X. Fun.

--- a/demo/repo/Jenkinsfile
+++ b/demo/repo/Jenkinsfile
@@ -14,13 +14,31 @@ stage('Sources') {
   }
 }
 
-stage('Testing') {
-  testInParallel(count(Integer.parseInt(params.SPLIT)), 'inclusions.txt', 'exclusions.txt', 'target/surefire-reports/TEST-*.xml', 'maven:3.5.0-jdk-8', {
+stage('Testing Hello') {
+  testInParallel(count(Integer.parseInt(params.SPLIT)), 'inclusions.txt', 'exclusions.txt',
+      'target/surefire-reports/TEST-*.xml', 'maven:3.5.0-jdk-8', "Testing Hello" {
     unstash 'sources'
   }, {
-    configFileProvider([configFile(fileId: 'jenkins-mirror', variable: 'SETTINGS')]) {
-      withEnv(["MULTIPLIER=$params.MULTIPLIER"]) {
-        sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
+    dir('hello') {
+      configFileProvider([configFile(fileId: 'jenkins-mirror', variable: 'SETTINGS')]) {
+        withEnv(["MULTIPLIER=$params.MULTIPLIER"]) {
+          sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
+        }
+      }
+    }
+  })
+}
+
+stage('Testing Goodbye') {
+  testInParallel(count(Integer.parseInt(params.SPLIT)), 'inclusions.txt', 'exclusions.txt',
+      'target/surefire-reports/TEST-*.xml', 'maven:3.5.0-jdk-8', "Testing Goodbye" {
+    unstash 'sources'
+  }, {
+    dir('goodbye') {
+      configFileProvider([configFile(fileId: 'jenkins-mirror', variable: 'SETTINGS')]) {
+        withEnv(["MULTIPLIER=$params.MULTIPLIER"]) {
+          sh 'mvn -s $SETTINGS -B clean test -Dmaven.test.failure.ignore'
+        }
       }
     }
   })
