--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>parallel-test-executor</artifactId>
-            <version>1.9</version>
+            <version>1.10-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <!-- cf. https://stackoverflow.com/q/45761521/12916 -->
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
-            <version>1.21</version>
+            <version>1.22-beta-2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -141,7 +141,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-api</artifactId>
-            <version>2.20</version>
+            <version>2.24-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
