--- a/demo/repo/hello/pom.xml
+++ b/demo/repo/hello/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>test</groupId>
-  <artifactId>test</artifactId>
+  <artifactId>hello</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
