Routine demo updates.

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,6 +1,16 @@
-FROM jenkinsci/jenkins:2.73.1
+FROM jenkinsci/jenkins:2.89.2
 
 USER root
+
+ENV DOCKER_BUCKET get.docker.com
+ENV DOCKER_VERSION 1.12.6
+RUN set -x \
+    && curl -fSL "https://${DOCKER_BUCKET}/builds/Linux/x86_64/docker-$DOCKER_VERSION.tgz" -o docker.tgz \
+    && tar -xzvf docker.tgz \
+    && mv docker/* /usr/local/bin/ \
+    && rmdir docker \
+    && rm docker.tgz \
+    && docker -v
 
 ADD repo /tmp/repo
 COPY gen.sh /tmp/
